--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,7 +29,7 @@ jobs:
     needs: lint
     strategy:
       matrix:
-        node-version: [12.x, 13.x, 14.x, 15.x, 16.x]
+        node-version: [14.x, 15.x, 16.x]
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
@@ -69,7 +69,7 @@ jobs:
     needs: [lint, test, coverage]
     strategy:
       matrix:
-        node-version: [15.x]
+        node-version: [16.x]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
