--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,7 +28,7 @@ jobs:
     needs: lint
     strategy:
       matrix:
-        node-version: [12, 14, 16, 'lts/*']
+        node-version: [14, 16, 'lts/*']
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
