--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,7 @@ updates:
       day: "saturday"
       time: "00:00"
     commit-message:
+      prefix: "ci"
     labels:
       - "dependencies"
     open-pull-requests-limit: 10
