ci: extra perms

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,6 +6,11 @@ on:
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
+permissions:
+  id-token: write
+  contents: write
+  pull-requests: write
+  issues: write
 jobs:
   lint:
     name: Lint
