--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -73,10 +73,6 @@ jobs:
         with:
           node-version-file: '.nvmrc'
       - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v6
+        run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        with:
-          branches: |
-            ['main']
